--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ div#pagetitle {
     margin-left: auto;
     margin-right: auto;
     width: 850px;
-    margin-bottom: 3%; /*previously 4*/
+    margin-bottom: 4%; /*previously 4*/
     display: flex;
     justify-content: center;
 }
@@ -79,18 +79,18 @@ div#pagetitle {
 
 
 #headerimg {
-    margin-left: 100px;
+    margin-left: 0px;
     /* border: 2px solid #FFFFFF; */
     width: 260px;
     height: 260px;
     margin-bottom: 0px;
-    margin-right: 0px;
+    margin-right: 40px;
 }
 
 #name {
     vertical-align: top;
     text-align: center;
-	margin-top: 10px;
+		margin-top: 25px;
 }
 
 div#myname {
@@ -134,7 +134,7 @@ h1{
 
 h2{
     color: #222222;
-    margin: 1% 0% 1% 0%;
+    margin: -1% 0% 2% 0%;
     font-weight: bold;
 }
 
@@ -205,6 +205,7 @@ table ol {
 }
 
 .paper {
+	margin-left: 20px;
   margin-bottom: 20px;
   line-height: 1.5; 
 }
@@ -284,4 +285,54 @@ table ol {
 	font-size: 80%;
 	font-weight: bold;
 	margin-right: 5px;
+}
+
+#nav-name {
+	color: #2E75B6;
+	font-size: 140%;
+	font-weight: bold;
+}
+
+#label-preprint {
+	background:    #CC0000;
+	border-radius: 5px;
+	padding: 			 2px 10px;
+	height:        20px;
+	color:         #ffffff;
+	display:       inline-block;
+	font:          normal bold 12px/20px "Noto Sans", sans-serif;
+	text-align:    center;
+}
+
+#label-code {
+	background:    #ED7D31;
+	border-radius: 5px;
+	padding: 			 2px 10px;
+	height:        20px;
+	color:         #ffffff;
+	display:       inline-block;
+	font:          normal bold 12px/20px "Noto Sans", sans-serif;
+	text-align:    center;
+}
+
+#label-talk {
+	background:    #2E75B6;
+	border-radius: 5px;
+	padding: 			 2px 10px;
+	height:        20px;
+	color:         #ffffff;
+	display:       inline-block;
+	font:          normal bold 12px/20px "Noto Sans", sans-serif;
+	text-align:    center;
+}
+
+#label-misc{
+	background:    #666666;
+	border-radius: 5px;
+	padding: 			 2px 10px;
+	height:        20px;
+	color:         #ffffff;
+	display:       inline-block;
+	font:          normal bold 12px/20px "Noto Sans", sans-serif;
+	text-align:    center;
 }
