--- a/css/main.css
+++ b/css/main.css
@@ -205,9 +205,10 @@ table ol {
 }
 
 .paper {
-	margin-left: 20px;
+  margin-left: 20px;
   margin-bottom: 20px;
-  line-height: 1.5; 
+  line-height: 1.4; 
+  font-size: 90%;
 }
 
 .paper p {
@@ -296,43 +297,43 @@ table ol {
 #label-preprint {
 	background:    #CC0000;
 	border-radius: 5px;
-	padding: 			 2px 10px;
-	height:        20px;
+	padding: 			 1px 10px;
+	height:        18px;
 	color:         #ffffff;
 	display:       inline-block;
-	font:          normal bold 12px/20px "Noto Sans", sans-serif;
+	font:          normal bold 11px/17px "Noto Sans", sans-serif;
 	text-align:    center;
 }
 
 #label-code {
 	background:    #ED7D31;
 	border-radius: 5px;
-	padding: 			 2px 10px;
-	height:        20px;
+	padding: 			 1px 10px;
+	height:        18px;
 	color:         #ffffff;
 	display:       inline-block;
-	font:          normal bold 12px/20px "Noto Sans", sans-serif;
+	font:          normal bold 11px/17px "Noto Sans", sans-serif;
 	text-align:    center;
 }
 
 #label-talk {
 	background:    #2E75B6;
 	border-radius: 5px;
-	padding: 			 2px 10px;
-	height:        20px;
+	padding: 			 1px 10px;
+	height:        18px;
 	color:         #ffffff;
 	display:       inline-block;
-	font:          normal bold 12px/20px "Noto Sans", sans-serif;
+	font:          normal bold 11px/17px "Noto Sans", sans-serif;
 	text-align:    center;
 }
 
 #label-misc{
 	background:    #666666;
 	border-radius: 5px;
-	padding: 			 2px 10px;
-	height:        20px;
+	padding: 	   1px 10px;
+	height:        18px;
 	color:         #ffffff;
 	display:       inline-block;
-	font:          normal bold 12px/20px "Noto Sans", sans-serif;
+	font:          normal bold 11px/17px "Noto Sans", sans-serif;
 	text-align:    center;
 }
